// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusField renders default as expected 1`] = `
<div
  className="table-status-row"
>
  <div
    className="table-status-icon"
  />
  <p>
    TextStringDefault
  </p>
</div>
`;

exports[`StatusField renders failed as expected 1`] = `
<div
  className="table-status-row"
>
  <div
    className="table-status-icon"
  >
    <svg
      alt="Status Icon"
      aria-label="Status Icon"
      className="table-status-icon__critical"
      fillRule="evenodd"
      height="16"
      name="icon--error--glyph"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        Status Icon
      </title>
      <path
        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zM5.1 13.3L3.5 12 11 2.6l1.5 1.2-7.4 9.5z"
      />
    </svg>
  </div>
  <p>
    TextStringFailed
  </p>
</div>
`;

exports[`StatusField renders ok as expected 1`] = `
<div
  className="table-status-row"
>
  <div
    className="table-status-icon"
  >
    <svg
      alt="Status Icon"
      aria-label="Status Icon"
      className="table-status-icon__healthy"
      fillRule="evenodd"
      height="16"
      name="icon--checkmark--glyph"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        Status Icon
      </title>
      <path
        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zM6.7 11.5L3.4 8.1l1.4-1.4 1.9 1.9 4.1-4.1 1.4 1.4-5.5 5.6z"
      />
    </svg>
  </div>
  <p>
    TextStringOK
  </p>
</div>
`;

exports[`StatusField renders warning as expected 1`] = `
<div
  className="table-status-row"
>
  <div
    className="table-status-icon"
  >
    <svg
      alt="Status Icon"
      aria-label="Status Icon"
      className="table-status-icon__warning"
      fillRule="evenodd"
      height="16"
      name="icon--warning--glyph"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        Status Icon
      </title>
      <path
        d="M8 1L0 15h16L8 1zm-.8 5h1.5v1.4L8.3 11h-.8l-.4-3.6V6h.1zm.8 8c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
      />
    </svg>
  </div>
  <p>
    TextStringWarning
  </p>
</div>
`;
